--- a/index.html
+++ b/index.html
@@ -114,6 +114,36 @@
                 </div>
             </div>
         </section>
+        <section class="section-content services-bg">
+            <div class="column-wrapper">
+                <div class="column-row">
+                    <div class="column column_s-2 column_m-2 column_l-4">
+                        <div class="service">
+                            <img src="images/services-support.svg" class="service__icon" alt="services-support">
+                            <div class="service__text">
+                                Быстрая доставка <br class="service__text__display-br-1">по всей России
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column column_s-2 column_m-2 column_l-4">
+                        <div class="service">
+                            <img src="images/services-return.svg" class="service__icon" alt="services-return">
+                            <div class="service__text">
+                                100% гарантия возврата <br class="service__text__display-br-1">и подлинность товара
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column column_s-2 column_m-2 column_l-4">
+                        <div class="service service_last">
+                            <img src="images/services-delivery.svg" class="service__icon" alt="services-delivery">
+                            <div class="service__text">
+                                Круглосуточная <br class="service__text__display-br-1">служба поддержки
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script src="js/grid.js"></script>
     </body>
