--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="column-row">
             <div class="column column_s-2 column_m-2 column_l-4">
                 <div class="service">
-                    <img src="images/services-support.svg" class="service__icon" alt="services-support">
+                    <img src="images/services-delivery.svg" class="service__icon" alt="Доставка">
                     <div class="service__text">
                         Быстрая доставка <br class="service__text__display-br-1">по всей России
                     </div>
@@ -127,16 +127,16 @@
             </div>
             <div class="column column_s-2 column_m-2 column_l-4">
                 <div class="service">
-                    <img src="images/services-return.svg" class="service__icon" alt="services-return">
+                    <img src="images/services-return.svg" class="service__icon" alt="Возврат">
                     <div class="service__text">
                         100% гарантия возврата
-                        <nobr>и подлинность товара</nobr>
+                        <span class="nowrap">и подлинность товара</span>
                     </div>
                 </div>
             </div>
             <div class="column column_s-2 column_m-2 column_l-4">
                 <div class="service service_last">
-                    <img src="images/services-delivery.svg" class="service__icon" alt="services-delivery">
+                    <img src="images/services-support.svg" class="service__icon" alt="Служба поддержки">
                     <div class="service__text">
                         Круглосуточная <br class="service__text__display-br-1">служба поддержки
                     </div>
@@ -148,50 +148,46 @@
 <footer class="footer">
     <div class="column-wrapper">
         <div class="column-row">
-            <div class="footer__links">
-                <div class="column column_s-2 column_m-3 column_l-4">
-                    <div class="footer__social">
-                        <div class="footer__social__link">
-                            <a href="#" class="footer-social-icon footer-social-icon_facebook"></a>
-                        </div>
-                        <div class="footer__social__link">
-                            <a href="#" class="footer-social-icon footer-social-icon_twitter"></a>
-                        </div>
-                        <div class="footer__social__link">
-                            <a href="#" class="footer-social-icon footer-social-icon_vk"></a>
-                        </div>
-                        <div class="footer__social__link">
-                            <a href="#" class="footer-social-icon footer-social-icon_instagram"></a>
-                        </div>
+            <div class="column column_s-2 column_m-3 column_l-4">
+                <div class="social">
+                    <div class="social__link">
+                        <a href="#" class="social-icon social-icon_facebook"></a>
+                    </div>
+                    <div class="social__link">
+                        <a href="#" class="social-icon social-icon_twitter"></a>
+                    </div>
+                    <div class="social__link">
+                        <a href="#" class="social-icon social-icon_vk"></a>
+                    </div>
+                    <div class="social__link">
+                        <a href="#" class="social-icon social-icon_instagram"></a>
                     </div>
                 </div>
-                <div class="column column_s-2 column_m-3 column_l-4">
-                    <div class="footer__app">
-                        <div class="footer__app__link">
-                            <a href="#" class="footer-app-icon footer-app-icon_app-store"></a>
-                        </div>
-                        <div class="footer__app__link">
-                            <a href="#" class="footer-app-icon footer-app-icon_google-play"></a>
-                        </div>
+            </div>
+            <div class="column column_s-2 column_m-3 column_l-4">
+                <div class="app">
+                    <div class="app__link">
+                        <a href="#" class="app-icon app-icon_app-store"></a>
+                    </div>
+                    <div class="app__link">
+                        <a href="#" class="app-icon app-icon_google-play"></a>
                     </div>
                 </div>
-                <div class="footer__desktop">
-                    <div class="column column_l-3"></div>
-                    <div class="column column_l-1">
-                        <img src="styles/blocks/footer/footer-logo.svg" alt="logo">
-                    </div>
-                </div>
+            </div>
+            <div class="column column_s-0 column_m-0 column_l-3"></div>
+            <div class="column column_s-0 column_m-0 column_l-1">
+                <img src="styles/blocks/footer/footer-logo.svg" alt="logo">
             </div>
         </div>
         <div class="footer__line"></div>
         <div class="footer__text">
             © 2019 Группа компаний HeadHunter<br>
             Сегодня на сайте
-            <nobr>684 978 вакансий,</nobr>
-            <nobr>34 789 747 резюме,</nobr>
-            <nobr>858 923 компании</nobr>
-            <nobr>и за неделю</nobr>
-            <nobr>1 211 363 приглашения</nobr>
+            <span class="nowrap">684 978 вакансий,</span>
+            <span class="nowrap">34 789 747 резюме,</span>
+            <span class="nowrap">858 923 компании</span>s
+            <span class="nowrap">и за неделю</span>
+            <span class="nowrap">1 211 363 приглашения</span>
         </div>
     </div>
 </footer>
